--- a/modules/110_hotline_hli/app/views/icm/incident_journals/_new_form.html.erb
+++ b/modules/110_hotline_hli/app/views/icm/incident_journals/_new_form.html.erb
@@ -330,7 +330,8 @@
 
 <% content_for :incident_request_reply_form do %>
    <% if @incident_request.watcher?(Irm::Person.current.id)&&allow_to_function?(:reply_incident_request)&&!@incident_request.close?&&!@incident_request.permanent_close? %>
-       <%= form_for(@incident_reply, :url=>{:action=>"create", :format => "js"}, :builder => CustomFormBuilder, :html => {:multipart => true, :target => "frame",:style=>"margin:0;"}) do |f| %>
+       <%= form_for(@incident_reply, :url=>{:action=>"create", :format => "js"}, :builder => CustomFormBuilder,
+                    :html => {:multipart => true, :target => "frame",:style=>"margin:0;", :onSubmit => "mask_after_journal();"}) do |f| %>
         <div class="page-block">
           <table class="page-block-header"><tr>
             <td class="page-block-title">
@@ -674,6 +675,9 @@
         }
         $("#file-contents").html("");
         $("#file-template").attr("sequence", 0);
+    }
+    function mask_after_journal(){
+        $("#new_icm_incident_reply").mask($.i18n("processing"));
     }
 </script>
 <% unless limit_device? %>
