--- a/modules/20_incident_icm/app/views/icm/incident_journals/create_journal.js.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_journals/create_journal.js.erb
@@ -1,5 +1,5 @@
 $(function(){
-    $("body").unmask();
+    $("#new_icm_incident_reply").unmask();
     <% prepare_request_files(@incident_request) %>
     <% unless flash[:notice].present?%>
         $("#replies").append("<%= escape_javascript(render :partial => "list_journals", :locals => {:journals => @current_journals, :grouped_files => @request_files})%>");
