--- a/modules/10_ironmine_irm/app/views/irm/organization_infos/index.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/organization_infos/index.html.erb
@@ -11,31 +11,37 @@
     </td>
   </tr></table>
   <div class="page-block-body">
-    <table class="show-table">
-      <tbody>
-          <tr>
-            <td class="label-col"><label><%=(t :label_irm_organization_short_name)%></label></td>
-            <td class="data-col"><%=@organization.short_name%></td>
-            <td class="label-col empty">&nbsp;</td>
-            <td class="data-col empty">&nbsp;</td>
-          </tr>
-          <tr>
-            <td class="label-col"><label><%=(t :label_irm_organization_name)%></label></td>
-            <td class="data-col"><%=@organization[:name]%></td>
-            <td class="label-col empty">&nbsp;</td>
-            <td class="data-col empty">&nbsp;</td>
-          </tr>
-          <tr>
-            <td class="label-col"><label><%=(t :label_irm_organization_description)%></label></td>
-            <td class="data-col"><%=@organization[:description]%></td>
-            <td class="label-col empty">&nbsp;</td>
-            <td class="data-col empty">&nbsp;</td>
-          </tr>
-      </tbody>
-    </table>
+    <% if @organization.any? %>
+        <table class="show-table">
+          <tbody>
+              <tr>
+                <td class="label-col"><label><%=(t :label_irm_organization_short_name)%></label></td>
+                <td class="data-col"><%=@organization.short_name%></td>
+                <td class="label-col empty">&nbsp;</td>
+                <td class="data-col empty">&nbsp;</td>
+              </tr>
+              <tr>
+                <td class="label-col"><label><%=(t :label_irm_organization_name)%></label></td>
+                <td class="data-col"><%=@organization[:name]%></td>
+                <td class="label-col empty">&nbsp;</td>
+                <td class="data-col empty">&nbsp;</td>
+              </tr>
+              <tr>
+                <td class="label-col"><label><%=(t :label_irm_organization_description)%></label></td>
+                <td class="data-col"><%=@organization[:description]%></td>
+                <td class="label-col empty">&nbsp;</td>
+                <td class="data-col empty">&nbsp;</td>
+              </tr>
+          </tbody>
+        </table>
+    <% else %>
+        <%= content_tag :div,{:id => "errorDiv_ep", :class => "alert alert-error"} do %>
+            <%= t(:no_data) %>
+        <% end %>
+    <% end %>
   </div>
 </div>
-
+<% if @organization.any? %>
 <!--页面结构-->
 <div class="page-block">
   <table class="page-block-header"><tr>
@@ -52,6 +58,7 @@
     <div id="organization_infosPaginatorBox"></div>
   </div>
 </div>
+<% end %>
 
 
 
