--- a/modules/20_incident_icm/app/views/icm/support_groups/_new_form.html.erb
+++ b/modules/20_incident_icm/app/views/icm/support_groups/_new_form.html.erb
@@ -49,14 +49,12 @@
       <table class="page-block-header">
         <tr>
           <td class="page-block-title">
-            <h2 class="block-title"><%= t(:step_n, :n => params[:step]) %><%=  t(:label_icm_chose_group) %></h2>
+            <h2 class="block-title"><%=t(:label_icm_support_group_new)%></h2>
           </td>
           <td class="page-block-button">
             <%= content_for :form_buttons %>
           </td>
-          <td class="page-block-help">
-            <%= t(:step_n_total_m, :n => params[:step], :m => "2") %>
-          </td>
+          <td class="page-block-help">           </td>
         </tr>
       </table>
       <%= error_for @support_group %>
