--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/framework.css.less
@@ -54,6 +54,8 @@ body#body {
     line-height: 14px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 75% !important;
+    //解决chrome下中文字体不能小于11px
+    -webkit-text-size-adjust: none;
 }
 
 // page header=========
