--- a/modules/20_incident_icm/app/views/icm/incident_journals/edit_upgrade.html.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_journals/edit_upgrade.html.erb
@@ -6,7 +6,7 @@
           <tr>
             <td class="label-col"><label for="incident_request_support_group_id"><%=t(:label_icm_incident_request_support_group)%></label></td>
             <td class="data-col">
-              <%=upgrade_support_group_name(@incident_request.support_group_id)%>
+              <label><%=upgrade_support_group_name(@incident_request.support_group_id)%></label>
             </td>
             <td class="label-col"><label for="incident_request_support_person_id"><%=t(:label_icm_incident_request_support_person)%></label></td>
             <td class="data-col">
@@ -15,7 +15,6 @@
             </td>
             <td class="label-col"></td>
             <td class="data-col"></td>
-
           </tr>
           <tr>
             <%= fields_for @incident_journal,:as=>"incident_journal",:builder => LabellingFormBuilder,:normal=>true do |sub_f|%>
