--- a/modules/10_ironmine_irm/app/views/irm/wf_approval_processes/_ap_sumit_actions.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/wf_approval_processes/_ap_sumit_actions.html.erb
@@ -23,7 +23,7 @@
       <% else %>
           <div class="btn-toolbar">
             <div class="btn-group">
-              <%= link_to(t(:label_irm_wf_approval_process_add_exists_action),{:action => "add_exists_action",:source_str=>"AP_SUBMIT,#{@wf_approval_process.id}"},:back=>true,:class=>"btn btn-info disabled") %>
+              <%= link_to(t(:label_irm_wf_approval_process_add_exists_action),{:action => "add_exists_action",:source_str=>"AP_SUBMIT,#{@wf_approval_process.id}"},:back=>true,:class=>"btn btn-info disabled",:disabled=>true) %>
             </div>
           </div>
       <% end %>
