--- a/modules/10_ironmine_irm/app/views/irm/wf_approval_processes/show.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/wf_approval_processes/show.html.erb
@@ -19,7 +19,7 @@
       <% unless @wf_approval_process.enabled? %>
           <%= link_to t(:edit), {:action => "edit", :id => @wf_approval_process.id},:back=>true,:class=>"btn btn-primary" %>
       <% else %>
-          <%= link_to t(:edit), {}, :disabled => true,:class=>"btn" %>
+          <%= link_to t(:edit), {}, :disabled => true,:class=>"btn btn-primary" %>
       <% end %>
       <%= link_back t(:back),{:action => "index"},:class=>"btn" %>
 
